# CheatEngine-With-kdmapper

./: .gitignore  CheatEngine with Kdmapper.sln  DBK with Kdmapper.sln  Project_Architecture_Overview.txt  README.md  项目架构文档.txt  项目架构文档文字图形版
CheatEngine_With_Qt/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Cheat Engine_Qt_ChatGpt.vcxproj  Cheat Engine_Qt_ChatGpt.vcxproj.filters  CheatEngine_With_Qt.cpp  CheatEngine_With_Qt.h  CheatEngine_With_Qt.qrc  CheatEngine_With_Qt.ui  CheatEngine_With_Qt.vcxproj  CheatEngine_With_Qt.vcxproj.filters  MainWindow.cpp  MainWindow.h  README.md  address_list_model.cpp  address_list_model.h  build_and_run.bat  disk_backed_result_set.cpp  disk_backed_result_set.h  main.cpp  process_dialog.cpp  process_dialog.h  process_manager.cpp  process_manager.h  scan_engine.cpp  scan_engine.h  scan_result_model.cpp  scan_result_model.h  task_progress.md  thread_pool.h  ui_CheatEngine_With_Qt.h
CheatEngine_With_Qt/Cheat Engine Core/: Cheat Engine With C++.cpp  DebuggerInterface.h  Filehandler.h  Globals.h  NewKernelHandler.cpp  NewKernelHandler.h  Winapi.hpp  WindowsDebugger.cpp  debug.h  frmEditHistoryUnit.h  plugin.h
CheatEngine_With_Qt/Factory/: memory_accessor_factory.cpp  memory_accessor_factory.h  memory_region_enumerator_factory.cpp  memory_region_enumerator_factory.h  module_enumerator_factory.cpp  module_enumerator_factory.h  process_enumerator_factory.cpp  process_enumerator_factory.h
CheatEngine_With_Qt/ViewModel/: Add_Or_Change_Address.cpp  Add_Or_Change_Address.h  MainWindow.cpp  MainWindow.h  address_list_model.cpp  address_list_model.h  display_mode_delegate.cpp  display_mode_delegate.h  type_delegate.cpp  type_delegate.h
CheatEngine_With_Qt/interface/: imemory_accessor.h  imemory_region_enumerator.h  imodule_enumerator.h  iprocess_enumerator.h  iscan_value_provider.h
CheatEngine_With_Qt/language_translations/: Translation_en.ts
CheatEngine_With_Qt/process/: process_manager.cpp  process_memory_snapshot_manager.cpp
CheatEngine_With_Qt/resource/: resources.qrc
CheatEngine_With_Qt/scan/: scan_data_provider.cpp  scan_data_provider.h  scan_data_stream_define.h  scan_engine.cpp  scan_engine.h  scan_result_formatter.cpp  scan_result_formatter.h  scan_result_repository.cpp  scan_result_repository.h  (+10 more)
(+71 files in other folders)
